fixed subscribe button visibility

--- a/src/index.css
+++ b/src/index.css
@@ -85,6 +85,17 @@ Navbar.js
     color: rgb(97, 96, 96);
   }
 }
+/* 
+***************************************************************
+AnimeList.js 
+***************************************************************
+*/
+#subscribe-notify{
+  color: green;
+  display: none;
+  padding-top: 10px;
+  padding-left: 10px;
+}
 
 /* 
 ***************************************************************
